client/install/rsocket-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rsocket-ingress
  namespace: sensordata
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: sensordata-rsocket-ingress-service
              servicePort: 3000
